horz scrollbar fix

--- a/app/globals.css
+++ b/app/globals.css
@@ -36,6 +36,7 @@ body {
 body {
   color: rgb(var(--foreground-rgb));
   background: rgb(var(--background-rgb));
+  overflow-x: hidden;
 }
 
 .card:hover:before {
